# feedflow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  issues.md  updates.md
.github/workflows/: release.yml
android/: build.gradle.kts  build_apk.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/feedflow/app/: AppLogger.kt  MainActivity.kt  MikanParser.kt  RssParser.kt  api.kt  db.kt  models.kt  repository.kt
android/app/src/main/java/com/feedflow/app/download/: Aria2Client.kt  DownloadClient.kt  QBittorrentClient.kt  TransmissionClient.kt
android/app/src/main/java/com/feedflow/app/ui/: AnimeDetailScreen.kt  AnimeScreen.kt  ArticleCard.kt  ArticleDetailScreen.kt  DiscoverScreen.kt  FeedFlowApp.kt  FeedsScreen.kt  HomeScreen.kt  SettingsScreen.kt  Theme.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
docker/: entrypoint.sh
docs/: technical.md
src/: auth.rs  main.rs  mikan.rs  opml.rs
src/api/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/download/: mod.rs
src/feed/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
static/: index.html
